tests/integration/snapshots/main__integration__help__help_enum_only.snap
---
source: tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
git

Available git commands

USAGE:
    git <COMMAND>

COMMANDS:
    clone
            Clone a repository
    log
            Show commit history
    remote
            Manage remotes
