tests/integration/snapshots/main__integration__help__nested_subcommand_clone_help.snap
---
source: tests/integration/help.rs
expression: "$crate :: common ::\nstrip_binary_paths(& $crate :: common :: strip_ansi(& help))"
---
<PROGRAM>

Clone a repository

USAGE:
    <PROGRAM>

ARGUMENTS:
        <URL>
            Repository URL

OPTIONS:
        --depth <OPTION>
            Clone depth (shallow clone)
    -b, --branch <OPTION>
            Branch to clone
