tests/integration/snapshots/main__integration__help__subcommand_root_help.snap
---
source: tests/integration/help.rs
expression: "$crate :: common ::\nstrip_binary_paths(& $crate :: common :: strip_ansi(& help))"
---
<PROGRAM>

CLI with subcommands for testing subcommand-specific help

USAGE:
    <PROGRAM>

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <OPTION>
            Generate shell completions.

COMMANDS:
    install
            Install a package
    rm
            Remove a package
    ls
            List installed packages
